--- a/src/css/AboutUs.css
+++ b/src/css/AboutUs.css
@@ -1,10 +1,22 @@
+body{
+    color: rgb(79, 79, 79);
+}
 .main-container{
-    width: 40%;
+    display: flex;
+    flex-direction:column;
+    text-align: center;
+    padding: 10vmin 20% 0 20%;
     margin: 2vmin;
-    padding-top: 10%;
+    width: 100%;
 }
 .about_container{
-    padding: 5vmin;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../img/aboutus.png);
+  background-size: cover;
 }
 .attendBtn{
     text-decoration: none;
