--- a/src/css/Attend.css
+++ b/src/css/Attend.css
@@ -1,4 +1,35 @@
-.Main--content{
-    width: 80%;
-    
+.attend-main-container{
+    width: 40%;
+    margin: 2vmin;
+    padding-top: 10%;
 }
+div.attend-main-container{
+    padding-left: 10vmin;
+}
+.attend-attendBtn{
+    text-decoration: none;
+    color: rgb(243, 241, 241);
+    font-weight: bolder;
+    text-align: center;
+    width: 100px;
+    background-color:yellowgreen;
+    border-radius: 20px;
+    padding :10px 20px 10px 20px;
+}
+.attend-attendBtn:hover{
+    background-color:rgb(125, 167, 43);
+    font-weight: bolder;
+    color: rgb(243, 241, 241);
+}
+div.attend-about_container{
+    padding: 0;
+}
+.attend-about_container{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(../img/Frame6.png);
+    background-size: cover;
+  }
