--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -58,7 +58,7 @@
     padding-top: 50vh;
 }
 .main-content-container h1 {
-    color : #142a8d;
+    color : rgb(95, 122, 36);
 }
 .mb-3 {
     margin-bottom: 0rem!important;
