--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,9 +1,33 @@
-.background-img{
-    position: absolute;
+.background-img {
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: url(../img/Frame2.png);
   background-size: cover;
+}
+
+.cloud {
+  position: absolute;
+}
+
+.first {
+  top: 10%;
+  left: 30%;
+}
+
+.second {
+  top: 30%;
+  left: 0;
+}
+
+.third {
+  top: 20%;
+  right: 0;
+}
+
+.fourth {
+  top: 50%;
+  right: 0;
 }
