--- a/src/css/AboutUs.css
+++ b/src/css/AboutUs.css
@@ -16,7 +16,7 @@ body{
   width: 100%;
   height: 100%;
   background: url(../img/aboutus.png);
-  background-size: cover;
+  background-size: 100% 100%;
 }
 .attendBtn{
     text-decoration: none;
