--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -41,3 +41,10 @@
 .Title{
     text-align: center;
 }
+.social-login-logo-align{
+    display: flex;
+    justify-content: center;
+}
+.google-logo-btn{
+    width: 20px;
+}
